# developtools_smartperf_host

./: .gitattributes  .gitignore  OAT.xml  README.md  README_zh.md  bundle.json
smartperf_device/device_command/: BUILD.gn  README_zh.md  heartbeat.cpp  smartperf_main.cpp
smartperf_device/device_command/cmds/include/: client_control.h  control_call_cmd.h  editor_command.h  smartperf_command.h
smartperf_device/device_command/cmds/src/: client_control.cpp  control_call_cmd.cpp  editor_command.cpp  smartperf_command.cpp
smartperf_device/device_command/collector/include/: AI_schedule.h  ByTrace.h  CPU.h  Capture.h  DDR.h  Dubai.h  FPS.h  FileDescriptor.h  GPU.h  GameEvent.h  GpuCounter.h  Network.h  Power.h  RAM.h  Temperature.h  Threads.h  cpu_info.h  effective.h  hiperf.h  lock_frequency.h  navigation.h  parse_slide_fps_trace.h  sdk_data_recv.h
smartperf_device/device_command/collector/src/: AI_schedule.cpp  ByTrace.cpp  CPU.cpp  Capture.cpp  DDR.cpp  Dubai.cpp  FPS.cpp  FileDescriptor.cpp  GPU.cpp  GameEvent.cpp  GpuCounter.cpp  GpuCounterCallback.cpp  Network.cpp  Power.cpp  RAM.cpp  Temperature.cpp  Threads.cpp  cpu_info.cpp  effective.cpp  hiperf.cpp  lock_frequency.cpp  navigation.cpp  parse_slide_fps_trace.cpp  sdk_data_recv.cpp
smartperf_device/device_command/include/: common.h  heartbeat.h  sp_csv_util.h  sp_profiler.h
smartperf_device/device_command/interface/: GameEventCallback.h  GameServicePlugin.h  GpuCounterCallback.h
smartperf_device/device_command/scenarios/include/: parse_click_complete_trace.h  parse_click_response_trace.h  parse_radar.h  stalling_rate_trace.h
smartperf_device/device_command/scenarios/src/: parse_click_complete_trace.cpp  parse_click_response_trace.cpp  parse_radar.cpp  stalling_rate_trace.cpp
smartperf_device/device_command/test/: BUILD.gn
smartperf_device/device_command/test/unittest/: bytrace_test.cpp  control_call_cmd_test.cpp  ddr_test.cpp  dubai_test.cpp  editor_command_test.cpp  filedescriptor_test.cpp  fps_test.cpp  getlog_test.cpp  gpuCounter_test.cpp  lock_frequency_test.cpp  parse_click_complete_trace_test.cpp  parse_radar_test.cpp  parse_slide_fps_trace_test.cpp  power_test.cpp  ram_test.cpp  sdk_data_recv_test.cpp  smartperf_main_test.cpp  sp_daemon_test.cpp  sp_server_socket_test.cpp  sp_task_test.cpp  sp_utils_test.cpp  stalling_rate_trace_test.cpp  startup_delay_test.cpp  threads_test.cpp
smartperf_device/device_command/utils/include/: GetLog.h  service_plugin.h  sp_log.h  sp_profiler_factory.h  sp_utils.h  startup_delay.h
smartperf_device/device_command/utils/src/: GetLog.cpp  service_plugin.cpp  sp_log.cpp  sp_profiler_factory.cpp  sp_utils.cpp  startup_delay.cpp
smartperf_host/trace_streamer/prebuilts/patch_hiperf/: BUILD.gn  hiperf.patch  hiviewdfx_BUILD.gn  hiviewdfx_faultloggerd.patch
smartperf_host/trace_streamer/src/: BUILD.gn  main.cpp  version.cpp  version.h
smartperf_host/trace_streamer/src/base/: BUILD.gn  base_map.h  clock_filter.h  codec_cov.cpp  codec_cov.h  file.cpp  file.h  filter_constraints.cpp  htrace_plugin_time_parser.h  index_map.cpp  log.h  optimize.h  pbreader_file_header.h  quatra_map.h  string_help.h  string_to_numerical.h  ts_common.h
smartperf_host/trace_streamer/src/cfg/: trace_streamer_config.cpp  trace_streamer_config.h
smartperf_host/trace_streamer/src/filter/: BUILD.gn  animation_filter.cpp  animation_filter.h  app_start_filter.cpp  app_start_filter.h  binder_filter.h  clock_filter_ex.h  config_filter.cpp  config_filter.h  cpu_filter.cpp  cpu_filter.h  filter_base.cpp  filter_base.h  frame_filter.cpp  frame_filter.h  irq_filter.cpp  process_filter.cpp  process_filter.h  slice_filter.cpp  stat_filter.cpp  syscall_filter.cpp  syscall_filter.h  system_event_measure_filter.cpp  task_pool_filter.cpp  task_pool_filter.h  timerfd_wakeup_filter.cpp  timerfd_wakeup_filter.h
smartperf_host/trace_streamer/src/metrics/: BUILD.gn  memStrategy.h
smartperf_host/trace_streamer/src/parser/: BUILD.gn  common_types.h  event_parser_base.cpp  print_event_parser.cpp  print_event_parser.h  thread_state_flag.cpp  thread_state_flag.h
smartperf_host/trace_streamer/src/proto_reader/: proto_reader_help.cpp
smartperf_host/trace_streamer/src/protos/: BUILD.gn  protogen.sh
smartperf_host/trace_streamer/src/rpc/: ffrt_converter.cpp  ffrt_converter.h  rpc_server.cpp  rpc_server.h  wasm_func.h
smartperf_host/trace_streamer/src/table/: BUILD.gn
smartperf_host/trace_streamer/src/trace_data/: BUILD.gn  trace_data_cache.cpp  trace_data_cache_base.cpp  trace_data_cache_base.h  trace_data_cache_reader.cpp  trace_data_cache_reader.h  trace_data_cache_writer.cpp  trace_data_cache_writer.h  trace_data_db.h
smartperf_host/trace_streamer/src/trace_streamer/: trace_streamer_filters.cpp  trace_streamer_filters.h  trace_streamer_selector.cpp  trace_streamer_selector.h
smartperf_host/trace_streamer/test/unittest/: BUILD.gn
trace_streamer/gn/: BUILD.gn  CONFIG.gn  wasm.gni
trace_streamer/gn/toolchain/: BUILD.gn
trace_streamer/prebuilts/patch_hiperf/: BUILD.gn  README.md  hiviewdfx_BUILD.gn  hiviewdfx_faultloggerd.patch  string_view_util.h  unique_fd.h
trace_streamer/src/filter/perf_filter/: BUILD.gn  perf_data_filter.cpp  perf_data_filter.h
trace_streamer/src/parser/ebpf_parser/: BUILD.gn  bio_latency_data_parser.cpp  bio_latency_data_parser.h  ebpf_base.cpp  ebpf_base.h  ebpf_data_parser.cpp  ebpf_data_parser.h  ebpf_data_reader.cpp  ebpf_data_reader.h  ebpf_data_structure.h  ebpf_splitter.cpp  ebpf_splitter.h  file_system_data_parser.cpp  file_system_data_parser.h  paged_memory_data_parser.cpp  paged_memory_data_parser.h
trace_streamer/src/table/base/: BUILD.gn  (+11 more)
trace_streamer/src/trace_data/: BUILD.gn  sqllite_prepar_cache_data.cpp  sqllite_prepar_cache_data.h  trace_data_cache.cpp  trace_data_cache.h  trace_data_cache_base.h  trace_data_cache_reader.cpp  trace_data_cache_reader.h  trace_data_cache_writer.cpp  trace_data_cache_writer.h  trace_data_db.cpp  trace_data_db.h
trace_streamer/test/: BUILD.gn  press_test.sh
trace_streamer/test/resource/: Mmap.htrace  pbreader.htrace
(+2697 files in other folders)
